--- a/templates/deleteitem.html
+++ b/templates/deleteitem.html
@@ -5,5 +5,11 @@
   <a href = "{{url_for('showCategories',categories_id=categories_id)}}"><button type="button">Cancel</button></a>
   </br></br>
 </form>
+<footer>
+  <a href ="https://www.linkedin.com/in/amr-yasser-731770151/" target="_blank"><img src="{{ url_for('static', filename='linkedin.png') }}" alt="my linkedin Link"
+    height="24" width="30"></a>
+  <a href="https://github.com/AmroYasser" target="_blank"><img src="{{ url_for('static',
+    filename='github.png') }}" alt="my GitHub Link" height="24" width="24"></a>
+</footer>
 </body>
 </html>
