--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -22,5 +22,11 @@
   <a href = "{{url_for('showItem',categories_id=categories_id, items_id=items_id)}}"><button type="button">Cancel</button></a>
   </br></br>
 </form>
+<footer>
+  <a href ="https://www.linkedin.com/in/amr-yasser-731770151/" target="_blank"><img src="{{ url_for('static', filename='linkedin.png') }}" alt="my linkedin Link"
+    height="24" width="30"></a>
+  <a href="https://github.com/AmroYasser" target="_blank"><img src="{{ url_for('static',
+    filename='github.png') }}" alt="my GitHub Link" height="24" width="24"></a>
+</footer>
 </body>
 </html>
