--- a/templates/public.html
+++ b/templates/public.html
@@ -20,5 +20,11 @@
   </ul>
   </br></br>
 </article>
+<footer>
+  <a href ="https://www.linkedin.com/in/amr-yasser-731770151/" target="_blank"><img src="{{ url_for('static', filename='linkedin.png') }}" alt="my linkedin Link"
+    height="24" width="30"></a>
+  <a href="https://github.com/AmroYasser" target="_blank"><img src="{{ url_for('static',
+    filename='github.png') }}" alt="my GitHub Link" height="24" width="24"></a>
+</footer>
 </body>
 </html>
