--- a/templates/publicitem.html
+++ b/templates/publicitem.html
@@ -7,5 +7,11 @@
   <h2 class="inline">{{items.author}}</h2>
   <h3 class="description">{{items.description}}</h3>
 </div>
+<footer>
+  <a href ="https://www.linkedin.com/in/amr-yasser-731770151/" target="_blank"><img src="{{ url_for('static', filename='linkedin.png') }}" alt="my linkedin Link"
+    height="24" width="30"></a>
+  <a href="https://github.com/AmroYasser" target="_blank"><img src="{{ url_for('static',
+    filename='github.png') }}" alt="my GitHub Link" height="24" width="24"></a>
+</footer>
 </body>
 </html>
